# agent-parallel-system

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.fast  README.md  analysis.md  api-specification.md  architecture.md  conversation-summary.md  database-schema.md  development-standards.md  docker-compose.minimal.yml  docker-compose.postgres-only.yml  docker-compose.test.yml  docker-compose.yml  fix_repo.sh  openapi.yaml  technical-specification.md  test.json  test_architecture.sh  工作Mermaid 流程图.md
.VSCodeCounter/2026-03-17_16-45-28/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.mcps/: README.md  filesystem.json  fs-list-dir.json  fs-read-file.json  fs-write-file.json  generated_github_3da8c6ed-8568-4f08-be07-f463ba0711c8.json  system-info.json  terminal-run.json  web-search.json
.roo/: mcp.json
config/: default.toml  personality_setting.md
docs/: API接口技术报告.md  agent_mcp_api.md  api_testing_guide.md  auth_api_standard.md  channel_layer.md  chat_agent_architecture.md  chat_agent_implementation.md  chinese_message_testing.md  debug_streaming_response.md  mcp_config_api.md  streaming_api_guide.md  streaming_response_fix.md  swagger-ui.html  task_runtime_flow.md  troubleshooting_guide.md  user_message_api.md  user_message_examples.md
examples/: test_streaming_debug.rs
migrations/: 001_create_messages_table.sql  001_create_users_table.sql  002_add_mcp_list_to_agents.sql  002_create_workspaces_tables.sql  003_add_status_to_workspaces.sql  003_create_agents_messages_tables.sql  004_align_schema_with_code.sql  005_convert_enum_columns_to_varchar.sql  006_harden_users_columns.sql  007_fix_agents_status_check.sql  008_create_workflow_tables.sql  009_create_chat_channel_tables.sql  010_create_graph_db_schema.cypher  database-schema.md
plans/: PLAN.md  chat-channel-architecture.md  detailed-architecture.md  implementation-roadmap.md
scripts/: api_test_tool.py  docker-optimized-build.sh  start-fast.sh  start-minimal.sh  start.sh  test-start.sh
src/: lib.rs  main.rs
src/agsnets/: actor_agent.rs  actor_agents.rs  actor_agents_manage.rs  handler.rs  mod.rs  model.rs
src/api/: auth.rs  auth_utils.rs  console.rs  mod.rs  redis_actor.rs  routes.rs  swagger.rs  web_ui.html
src/api/routes/: channel_routes.rs  chat_routes.rs
src/api/user/: actor_manager.rs  actor_user.rs  handler.rs  mod.rs  model.rs
src/channel/: actor_database.rs  actor_manager.rs  actor_messages.rs  handler.rs  manager.rs  mod.rs  persistence.rs  receiver.rs  types.rs
src/chat/: actor_messages.rs  chat_agent.rs  handler.rs  mod.rs  model.rs  openai_actor.rs  test.json  ws_handler.rs
src/core/: actor_system.rs  config.rs  dag.rs  database.rs  error_recovery.rs  errors.rs  handler.rs  log_handler.rs  logging.rs  mod.rs  realtime_logging.rs  realtime_logging_simple.rs  security.rs
src/graph_memory/: actor_memory.rs  handler.rs  mod.rs  neo4j_model.rs
src/mcp/: handler.rs  mcp_actor.rs  mod.rs  model.rs
src/mcp/mcp_util/: common.rs  filesystem.rs  mod.rs  system.rs  terminal.rs  weather.rs
src/middleware/: auth.rs  mod.rs
src/models/: agent.rs  channel.rs  chat.rs  message.rs  mod.rs  task.rs  user.rs  workflow.rs  workspace.rs
src/postgre_database/: actor_database.rs
src/services/: agent_service.rs  auth_service.rs  channel_adapter.rs  channel_service.rs  chat_service.rs  graph_db.rs  llm_client.rs  memory_service.rs  message_router.rs  message_service.rs  mod.rs  orchestrator_service.rs  task_service.rs  workflow_service.rs  workspace_service.rs
src/task/: dag_orchestrator.rs  handler.rs  mod.rs  model.rs  task_agent.rs  task_notify_queue.rs
src/task_handler/: actor_task.rs  agents.rs  handler.rs  mod.rs  task_agent.rs  task_model.rs
src/utils/: database_util.rs  env_util.rs  formatters.rs  handler_util.rs  helpers.rs  json_util.rs  log_broadcaster.rs  mod.rs  validators.rs  workspace_path.rs
src/workers/: cleanup_worker.rs  mod.rs  notification_worker.rs  task_worker.rs
src/workspace/: handler.rs  mod.rs  model.rs  workspace_actor.rs
