[package]
name = "agent-parallel-system"
version = "0.0.1"
edition = "2024"
description = "基于LLM的多智能体并行协作系统"
authors = ["banchen <banchen19@outlook.com>"]
license = "MIT"
repository = "https://github.com/banchen21/agent-parallel-system"
readme = "README.md"

# 更多元数据
[package.metadata]
rust-version = "1.70"

# 依赖项
[dependencies]

# LLM相关
async-openai = { version = "0.33.0", features = ["chat-completion"] }
# Web框架
actix-web = "4.13.0"
actix = "0.13"
tokio = { version = "1", features = ["full"] }
# 数据库
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "macros",
], default-features = false }
# 图数据库
neo4rs = "0.7"

# 时间处理和UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }

# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 认证和加密
jsonwebtoken = "9.3"
argon2 = "0.5"
bcrypt = "0.15"

# 配置管理
dotenv = "0.15"
config = "0.13"

# 日志和监控
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }

# Redis和消息队列
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
bb8 = "0.9"
bb8-redis = { version = "0.18", optional = true }

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "stream"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 工具库
futures = "0.3"
async-trait = "0.1"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
sha2 = "0.10"
log = "0.4"
hex = "0.4"
ctrlc = "3.4"
backoff = "0.4.0"
futures-util = "0.3.32"
actix-cors = "0.7.1"

# 系统监控
sysinfo = "0.38"
